ISTIO/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  managedFields:
  - apiVersion: networking.istio.io/v1beta1
  name: hellodocker
  namespace: meshtest
spec:
  host: hellodocker
  subsets:
  - labels:
      version: v1
    name: v1
  - labels:
      version: v2
    name: v2
  - labels:
      version: v3
    name: v3
